--- a/Sample_Notebook.ipynb
+++ b/Sample_Notebook.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Lasya-Masuldar/Dynamic_parking_price/blob/main/Sample_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "VTvr4_sti9Am"
       },
       "source": [
@@ -2578,8 +2588,6 @@
         "print(df_full.head())"
       ],
       "metadata": {
-        "id": "-206A_WDuCVz",
-        "outputId": "2d2356f3-b86e-4695-d02e-ae09597b9b8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 731,
@@ -2587,7 +2595,9 @@
             "c2e558b23a2b4b829527b9db36279fb2",
             "78e93d6b7c1249339fd5e94733b7ca40"
           ]
-        }
+        },
+        "id": "-206A_WDuCVz",
+        "outputId": "2d2356f3-b86e-4695-d02e-ae09597b9b8c"
       },
       "execution_count": 209,
       "outputs": [
@@ -3156,7 +3166,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kaggle": {
       "accelerator": "none",
